Adds design and implementation to redirect preview ByCatalogKindName to v1
This patch redirects `/resource/{catalog}/{kind}/{name}`

to

`/v1/resource/{catalog}/{kind}/{name}`
