# api/gen/http/resource/server/server.go
@@ -26,6 +26,7 @@ type Server struct {
 	ByCatalogKindNameVersionReadme http.Handler
 	ByCatalogKindNameVersionYaml   http.Handler
 	ByVersionID                    http.Handler
+	ByCatalogKindName              http.Handler
 	CORS                           http.Handler
 }
 
@@ -68,12 +69,14 @@ func New(
 			{"ByCatalogKindNameVersionReadme", "GET", "/resource/{catalog}/{kind}/{name}/{version}/readme"},
 			{"ByCatalogKindNameVersionYaml", "GET", "/resource/{catalog}/{kind}/{name}/{version}/yaml"},
 			{"ByVersionID", "GET", "/resource/version/{versionID}"},
+			{"ByCatalogKindName", "GET", "/resource/{catalog}/{kind}/{name}"},
 			{"CORS", "OPTIONS", "/resources"},
 			{"CORS", "OPTIONS", "/resource/{id}/versions"},
 			{"CORS", "OPTIONS", "/resource/{catalog}/{kind}/{name}/{version}"},
 			{"CORS", "OPTIONS", "/resource/{catalog}/{kind}/{name}/{version}/readme"},
 			{"CORS", "OPTIONS", "/resource/{catalog}/{kind}/{name}/{version}/yaml"},
 			{"CORS", "OPTIONS", "/resource/version/{versionID}"},
+			{"CORS", "OPTIONS", "/resource/{catalog}/{kind}/{name}"},
 		},
 		List:                           NewListHandler(e.List, mux, decoder, encoder, errhandler, formatter),
 		VersionsByID:                   NewVersionsByIDHandler(e.VersionsByID, mux, decoder, encoder, errhandler, formatter),
@@ -81,6 +84,7 @@ func New(
 		ByCatalogKindNameVersionReadme: NewByCatalogKindNameVersionReadmeHandler(e.ByCatalogKindNameVersionReadme, mux, decoder, encoder, errhandler, formatter),
 		ByCatalogKindNameVersionYaml:   NewByCatalogKindNameVersionYamlHandler(e.ByCatalogKindNameVersionYaml, mux, decoder, encoder, errhandler, formatter),
 		ByVersionID:                    NewByVersionIDHandler(e.ByVersionID, mux, decoder, encoder, errhandler, formatter),
+		ByCatalogKindName:              NewByCatalogKindNameHandler(e.ByCatalogKindName, mux, decoder, encoder, errhandler, formatter),
 		CORS:                           NewCORSHandler(),
 	}
 }
@@ -96,6 +100,7 @@ func (s *Server) Use(m func(http.Handler) http.Handler) {
 	s.ByCatalogKindNameVersionReadme = m(s.ByCatalogKindNameVersionReadme)
 	s.ByCatalogKindNameVersionYaml = m(s.ByCatalogKindNameVersionYaml)
 	s.ByVersionID = m(s.ByVersionID)
+	s.ByCatalogKindName = m(s.ByCatalogKindName)
 	s.CORS = m(s.CORS)
 }
 
@@ -107,6 +112,7 @@ func Mount(mux goahttp.Muxer, h *Server) {
 	MountByCatalogKindNameVersionReadmeHandler(mux, h.ByCatalogKindNameVersionReadme)
 	MountByCatalogKindNameVersionYamlHandler(mux, h.ByCatalogKindNameVersionYaml)
 	MountByVersionIDHandler(mux, h.ByVersionID)
+	MountByCatalogKindNameHandler(mux, h.ByCatalogKindName)
 	MountCORSHandler(mux, h.CORS)
 }
 
@@ -398,6 +404,57 @@ func NewByVersionIDHandler(
 	})
 }
 
+// MountByCatalogKindNameHandler configures the mux to serve the "resource"
+// service "ByCatalogKindName" endpoint.
+func MountByCatalogKindNameHandler(mux goahttp.Muxer, h http.Handler) {
+	f, ok := handleResourceOrigin(h).(http.HandlerFunc)
+	if !ok {
+		f = func(w http.ResponseWriter, r *http.Request) {
+			h.ServeHTTP(w, r)
+		}
+	}
+	mux.Handle("GET", "/resource/{catalog}/{kind}/{name}", f)
+}
+
+// NewByCatalogKindNameHandler creates a HTTP handler which loads the HTTP
+// request and calls the "resource" service "ByCatalogKindName" endpoint.
+func NewByCatalogKindNameHandler(
+	endpoint goa.Endpoint,
+	mux goahttp.Muxer,
+	decoder func(*http.Request) goahttp.Decoder,
+	encoder func(context.Context, http.ResponseWriter) goahttp.Encoder,
+	errhandler func(context.Context, http.ResponseWriter, error),
+	formatter func(err error) goahttp.Statuser,
+) http.Handler {
+	var (
+		decodeRequest  = DecodeByCatalogKindNameRequest(mux, decoder)
+		encodeResponse = EncodeByCatalogKindNameResponse(encoder)
+		encodeError    = goahttp.ErrorEncoder(encoder, formatter)
+	)
+	return http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
+		ctx := context.WithValue(r.Context(), goahttp.AcceptTypeKey, r.Header.Get("Accept"))
+		ctx = context.WithValue(ctx, goa.MethodKey, "ByCatalogKindName")
+		ctx = context.WithValue(ctx, goa.ServiceKey, "resource")
+		payload, err := decodeRequest(r)
+		if err != nil {
+			if err := encodeError(ctx, w, err); err != nil {
+				errhandler(ctx, w, err)
+			}
+			return
+		}
+		res, err := endpoint(ctx, payload)
+		if err != nil {
+			if err := encodeError(ctx, w, err); err != nil {
+				errhandler(ctx, w, err)
+			}
+			return
+		}
+		if err := encodeResponse(ctx, w, res); err != nil {
+			errhandler(ctx, w, err)
+		}
+	})
+}
+
 // MountCORSHandler configures the mux to serve the CORS endpoints for the
 // service resource.
 func MountCORSHandler(mux goahttp.Muxer, h http.Handler) {
@@ -414,6 +471,7 @@ func MountCORSHandler(mux goahttp.Muxer, h http.Handler) {
 	mux.Handle("OPTIONS", "/resource/{catalog}/{kind}/{name}/{version}/readme", f)
 	mux.Handle("OPTIONS", "/resource/{catalog}/{kind}/{name}/{version}/yaml", f)
 	mux.Handle("OPTIONS", "/resource/version/{versionID}", f)
+	mux.Handle("OPTIONS", "/resource/{catalog}/{kind}/{name}", f)
 }
 
 // NewCORSHandler creates a HTTP handler which returns a simple 200 response.
