# api/gen/resource/client.go
@@ -21,10 +21,11 @@ type Client struct {
 	ByCatalogKindNameVersionReadmeEndpoint goa.Endpoint
 	ByCatalogKindNameVersionYamlEndpoint   goa.Endpoint
 	ByVersionIDEndpoint                    goa.Endpoint
+	ByCatalogKindNameEndpoint              goa.Endpoint
 }
 
 // NewClient initializes a "resource" service client given the endpoints.
-func NewClient(list, versionsByID, byCatalogKindNameVersion, byCatalogKindNameVersionReadme, byCatalogKindNameVersionYaml, byVersionID goa.Endpoint) *Client {
+func NewClient(list, versionsByID, byCatalogKindNameVersion, byCatalogKindNameVersionReadme, byCatalogKindNameVersionYaml, byVersionID, byCatalogKindName goa.Endpoint) *Client {
 	return &Client{
 		ListEndpoint:                           list,
 		VersionsByIDEndpoint:                   versionsByID,
@@ -32,6 +33,7 @@ func NewClient(list, versionsByID, byCatalogKindNameVersion, byCatalogKindNameVe
 		ByCatalogKindNameVersionReadmeEndpoint: byCatalogKindNameVersionReadme,
 		ByCatalogKindNameVersionYamlEndpoint:   byCatalogKindNameVersionYaml,
 		ByVersionIDEndpoint:                    byVersionID,
+		ByCatalogKindNameEndpoint:              byCatalogKindName,
 	}
 }
 
@@ -96,4 +98,15 @@ func (c *Client) ByVersionID(ctx context.Context, p *ByVersionIDPayload) (res *B
 		return
 	}
 	return ires.(*ByVersionIDResult), nil
+}
+
+// ByCatalogKindName calls the "ByCatalogKindName" endpoint of the "resource"
+// service.
+func (c *Client) ByCatalogKindName(ctx context.Context, p *ByCatalogKindNamePayload) (res *ByCatalogKindNameResult, err error) {
+	var ires interface{}
+	ires, err = c.ByCatalogKindNameEndpoint(ctx, p)
+	if err != nil {
+		return
+	}
+	return ires.(*ByCatalogKindNameResult), nil
 }
