# api/gen/resource/service.go
@@ -30,6 +30,8 @@ type Service interface {
 	ByCatalogKindNameVersionYaml(context.Context, *ByCatalogKindNameVersionYamlPayload) (res *ByCatalogKindNameVersionYamlResult, err error)
 	// Find a resource using its version's id
 	ByVersionID(context.Context, *ByVersionIDPayload) (res *ByVersionIDResult, err error)
+	// Find resources using name of catalog, resource name and kind of resource
+	ByCatalogKindName(context.Context, *ByCatalogKindNamePayload) (res *ByCatalogKindNameResult, err error)
 }
 
 // ServiceName is the name of the service as defined in the design. This is the
@@ -40,7 +42,7 @@ const ServiceName = "resource"
 // MethodNames lists the service method names as defined in the design. These
 // are the same values that are set in the endpoint request contexts under the
 // MethodKey key.
-var MethodNames = [6]string{"List", "VersionsByID", "ByCatalogKindNameVersion", "ByCatalogKindNameVersionReadme", "ByCatalogKindNameVersionYaml", "ByVersionId"}
+var MethodNames = [7]string{"List", "VersionsByID", "ByCatalogKindNameVersion", "ByCatalogKindNameVersionReadme", "ByCatalogKindNameVersionYaml", "ByVersionId", "ByCatalogKindName"}
 
 // Resources is the result type of the resource service List method.
 type Resources struct {
@@ -131,6 +133,26 @@ type ByVersionIDPayload struct {
 // ByVersionIDResult is the result type of the resource service ByVersionId
 // method.
 type ByVersionIDResult struct {
+	// Redirect URL
+	Location string
+}
+
+// ByCatalogKindNamePayload is the payload type of the resource service
+// ByCatalogKindName method.
+type ByCatalogKindNamePayload struct {
+	// name of catalog
+	Catalog string
+	// kind of resource
+	Kind string
+	// Name of resource
+	Name string
+	// To find resource compatible with a Tekton pipelines version, use this param
+	Pipelinesversion *string
+}
+
+// ByCatalogKindNameResult is the result type of the resource service
+// ByCatalogKindName method.
+type ByCatalogKindNameResult struct {
 	// Redirect URL
 	Location string
 }
