# api/pkg/service/resource/resource.go
@@ -60,3 +60,11 @@ func (s *service) ByCatalogKindNameVersionYaml(ctx context.Context, p *resource.
 func (s *service) ByVersionID(ctx context.Context, p *resource.ByVersionIDPayload) (*resource.ByVersionIDResult, error) {
 	return &resource.ByVersionIDResult{Location: fmt.Sprintf("/v1/resource/version/%d", p.VersionID)}, nil
 }
+
+// Find resources using name of catalog, resource name and kind of resource
+func (s *service) ByCatalogKindName(ctx context.Context, p *resource.ByCatalogKindNamePayload) (*resource.ByCatalogKindNameResult, error) {
+	if p.Pipelinesversion != nil {
+		return &resource.ByCatalogKindNameResult{Location: fmt.Sprintf("/v1/resource/%s/%s/%s?pipelinesversion=%s", p.Catalog, p.Kind, p.Name, *p.Pipelinesversion)}, nil
+	}
+	return &resource.ByCatalogKindNameResult{Location: fmt.Sprintf("/v1/resource/%s/%s/%s", p.Catalog, p.Kind, p.Name)}, nil
+}
